--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
     <modules>
         <module>me-common</module>
         <module>me-exercise</module>
+        <module>jc-cloud</module>
+        <module>cloud-common</module>
     </modules>
 
     <dependencies>
